security/kyverno/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  background: true

  rules:
  - name: check-resources

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "CPU and memory requests/limits are required."

      pattern:
        spec:
          containers:
          - resources:
              requests:
                memory: "?*"
                cpu: "?*"
              limits:
                memory: "?*"
                cpu: "?*"
